# simple-polynomial-mirage

./: .gitignore  .gitmodules  3dGeomUtil.h  Angle2apparentMirrorDepth.cpp  Angle2apparentMirrorDepth.h  CMakeLists.txt  Eikonal.h  OdeSolver.h  OdeSolverGsl.h  PolynomialRayBending.cpp  PolynomialRayBending.h  README.md  RungeKuttaRayBending.cpp  RungeKuttaRayBending.h  ShepardInterpolation.h  ShepardRayBending.cpp  ShepardRayBending.h  StepperDormandPrice853.h  eikonal.cpp  googleTest.cpp  gslode.cpp  iterate.sh  iterateEikonal.sh  iterateMain.sh  main  main.cpp  mathUtil.cpp  mathUtil.h  ownplot.m  simpleRaytracer.cpp  simpleRaytracer.h  sin.cpp  sinincl.cpp  tempProfile.m
numrec/: nr3.h  odeint.h  stepperdopr853.h
